README.md updated to include install instructions.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
-    "dev": "cd backend && npm run dev",
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
+    "start": "cd backend && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
